Fix footer is above pic on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -333,7 +333,6 @@ button:focus {
   position: relative;
   padding-bottom: 70px !important;
   padding-top: 70px !important;
-  height: 100vh;
 }
 
 .home-about-description {
